# quote-miner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
src/: main.rs
tests/: meta_readme.rs
